feat: Add Speech-to-Text demo with audio recording and transcription capabilities
- Implemented a new STT (Speech-to-Text) demo in the Deepgram integration.
- Added frontend components for audio recording, playback, and transcription request management.
- Created backend routes for handling audio uploads and transcription requests.
- Integrated Deepgram's STT API for processing audio files and receiving transcription results via webhooks.
- Updated package.json to include necessary dependencies for multer and types.
- Enhanced UI with status messages and auto-refresh functionality for transcription requests.

--- a/ai/deepgram/public/index.html
+++ b/ai/deepgram/public/index.html
@@ -147,6 +147,15 @@
     <p class="subtitle">Demos showcasing Deepgram AI APIs with Hookdeck webhook management</p>
 
     <div class="demos">
+      <a href="/stt" class="demo-card">
+        <div class="demo-icon">🎧</div>
+        <div class="demo-title">Speech-to-Text</div>
+        <div class="demo-description">
+          Record audio and transcribe it to text using Deepgram's STT API with Hookdeck webhooks.
+        </div>
+        <span class="demo-status status-active">✅ ACTIVE</span>
+      </a>
+
       <a href="/tts" class="demo-card disabled">
         <div class="demo-icon">🗣️</div>
         <div class="demo-title">Text-to-Speech</div>
@@ -158,15 +167,6 @@
           Deepgram sends binary audio data which Hookdeck cannot forward (JSON only)
         </div>
       </a>
-
-      <div class="demo-card" style="opacity: 0.6; cursor: not-allowed;">
-        <div class="demo-icon">🎧</div>
-        <div class="demo-title">Speech-to-Text</div>
-        <div class="demo-description">
-          Transcribe audio to text with Deepgram's powerful STT API.
-        </div>
-        <span class="demo-status status-wip">COMING SOON</span>
-      </div>
 
       <div class="demo-card" style="opacity: 0.6; cursor: not-allowed;">
         <div class="demo-icon">📊</div>
